licenses(["notice"])

package(default_visibility = ["//visibility:public"])

java_library(
    name = "hcvault_aead",
    srcs = ["HcVaultAead.java"],
    deps = [
        "@tink_java//src/main/java/com/google/crypto/tink:aead",
        "@maven//:com_google_guava_guava",
        "@maven//:io_github_jopenlibs_vault_java_driver",
    ],
)

java_library(
    name = "hcvault_client",
    srcs = ["HcVaultClient.java"],
    deps = [
        ":hcvault_aead",
        "@tink_java//src/main/java/com/google/crypto/tink:aead",
        "@tink_java//src/main/java/com/google/crypto/tink:kms_client",
        "@tink_java//src/main/java/com/google/crypto/tink:kms_clients",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:io_github_jopenlibs_vault_java_driver",
    ],
)

java_library(
    name = "fake_hcvault",
    testonly = 1,
    srcs = ["FakeHcVault.java"],
    deps = [
        "@tink_java//src/main/java/com/google/crypto/tink:aead",
        "@tink_java//src/main/java/com/google/crypto/tink:key_templates",
        "@tink_java//src/main/java/com/google/crypto/tink:registry_cluster",
        "@tink_java//src/main/java/com/google/crypto/tink/subtle:random",
        "@maven//:io_github_jopenlibs_vault_java_driver",
    ],
)
